<resources>
    <string name="app_name">The Movie DB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="movies">Movies</string>
    <string name="top_rated">Top rated movies</string>
    <string name="upcoming">Upcoming movies</string>
    <string name="now_playing">Now playing movies</string>
    <string name="popular">Popular movies</string>
    <string name="profile">Profile</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="favoriteMovies">Favorite Movies</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
